--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-
+    <input class ="search" placeholder="Search"></input>
 
     <nav>
       <div class="welcome menu-box my-recipes-box">
@@ -26,7 +26,7 @@
     </nav>
     <button>Next</button>
 
-  
+
   </body>
 </html>
 <script type="text/javascript" src="scripts.js"></script>
