Add search bar functionality

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <h1 class="page-title">Welcome!</h1>
-    <input class ="search" placeholder="Search"></input>
+    <h2 class="page-title">Whats Cookin?</h2>
+    <input class="search" placeholder="Search" type="search">
+    <button class="search-btn">Search Recipes</button>
     <nav>
       <div class="welcome menu-box my-recipes-box">
         <h3 class="main-titles">My Recipes</h3>
