Add functioning favorite buttons

--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,16 @@
   <body>
     <h1 class="page-welcome">Welcome!</h1>
     <h2 class="page-title">What's Cookin'?</h2>
-    <input class="search" placeholder="Search" type="search">
+    <input class="search" placeholder="Search By Name" type="search">
     <button class="search-btn">Search Recipes</button>
     <nav>
       <div class="welcome menu-box my-recipes-box">
       </div>
       <div class="welcome menu-box all-recipes-box">
       </div>
-      <div class="welcome menu-box pantry-box">
+      <div class="welcome menu-box pantry-box" disabled>
       </div>
-      <div class="welcome menu-box recipes-to-cook-box">
+      <div class="welcome menu-box recipes-to-cook-box" disabled>
       </div>
     </nav>
   </body>
